successfully run JavaScript in two platforms